Abandoned attempt to auto-scroll-up the menu for now. Fixed the Editing modal to look better on mobile view. Added a "Done" button to the modal.

--- a/dice.css
+++ b/dice.css
@@ -91,7 +91,11 @@ html {
 body {
   /* Margin bottom by footer height */
   /*margin-bottom: 60px;*/
-  background-color: #f5f5f5;
+  background-color: #555555;
+}
+
+#statTable {
+  color: white;
 }
 
 .nav-link {
@@ -113,6 +117,10 @@ body {
 
 .-flex-wrap {
   flex-flow: wrap;
+}
+
+.-edit-dice-val {
+  width:3rem;
 }
 
 .h100 {
